src/objects/Lender__c.object
<CustomObject>
    <description>Lending and financing partner information.</description>
    <fields>
        <fullName>Production_Api_Endpoint__c</fullName>
        <description>Production API URL endpoint</description>
        <label>Production_Api_Endpoint</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Api_Endpoint__c</fullName>
        <description>Sandbox API URL endpoint</description>
        <label>Sandbox_Api_Endpoint</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Url__c</fullName>
        <description>Lender website URL</description>
        <label>Website Url</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <label>Lender</label>
    <nameField>
        <label>Lender Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lenders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>